--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
+    "pinia": "^2.1.4",
     "sass": "^1.63.4"
   }
 }
